[package]
name = "dart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
moka = "0.11.3"
tinyvec = {git = "https://github.com/iantbutler01/tinyvec", branch="ian/bincode-support", features=["bincode"]}
marble = "15.0.7"
bincode = "2.0.0-rc.3"
thiserror = "1.0.47"

[dev-dependencies]
tempfile = "3.8.0"
